--- a/source/css/style.css
+++ b/source/css/style.css
@@ -6456,43 +6456,43 @@ body.no-sidebar .sidebar {
   padding: 14px 0;
 }
 
-.markdown-body h1,
-.markdown-body h2,
-.markdown-body h3,
-.markdown-body h4,
-.markdown-body h5,
-.markdown-body h6 {
+.pure-markdown-body h1,
+.pure-markdown-body h2,
+.pure-markdown-body h3,
+.pure-markdown-body h4,
+.pure-markdown-body h5,
+.pure-markdown-body h6 {
   margin-top: 24px;
   margin-bottom: 16px;
   font-weight: 600;
   line-height: 1.25;
 }
 
-.markdown-body h1 {
+.pure-markdown-body h1 {
   padding-bottom: 0.3em;
   font-size: 2em;
   border-bottom: 1px solid #f2f2f2;
 }
 
-.markdown-body h2 {
+.pure-markdown-body h2 {
   padding-bottom: 0.3em;
   font-size: 1.5em;
   border-bottom: 1px solid #f2f2f2;
 }
 
-.markdown-body a {
+.pure-markdown-body a {
   color: #2196f3;
   text-decoration: none;
 }
 
-.markdown-body a:focus,
-.markdown-body a:hover {
+.pure-markdown-body a:focus,
+.pure-markdown-body a:hover {
   color: #0a6ebd;
   text-decoration: none;
 }
 
-.markdown-body ul,
-.markdown-body ol {
+.pure-markdown-body ul,
+.pure-markdown-body ol {
   padding-left: 0;
   margin-left: 20px;
 }
@@ -8164,8 +8164,8 @@ body.okayNav-loaded {
     left: -25px;
   }
 
-  .markdown-body .headerlink:before,
-  .markdown-body .markdownIt-Anchor:before {
+  .pure-markdown-body .headerlink:before,
+  .pure-markdown-body .markdownIt-Anchor:before {
     display: inline-block;
     width: 18px;
     content: "#";
@@ -8175,27 +8175,27 @@ body.okayNav-loaded {
     visibility: hidden;
   }
 
-  .markdown-body .headerlink:before {
+  .pure-markdown-body .headerlink:before {
     margin-left: -15px;
     padding-right: 2px;
   }
 
-  .markdown-body .markdownIt-Anchor:before {
+  .pure-markdown-body .markdownIt-Anchor:before {
     margin-left: -20px;
   }
 
-  .markdown-body h1:hover .headerlink:before,
-  .markdown-body h1:hover .markdownIt-Anchor:before,
-  .markdown-body h2:hover .headerlink:before,
-  .markdown-body h2:hover .markdownIt-Anchor:before,
-  .markdown-body h3:hover .headerlink:before,
-  .markdown-body h3:hover .markdownIt-Anchor:before,
-  .markdown-body h4:hover .headerlink:before,
-  .markdown-body h4:hover .markdownIt-Anchor:before,
-  .markdown-body h5:hover .headerlink:before,
-  .markdown-body h5:hover .markdownIt-Anchor:before,
-  .markdown-body h6:hover .headerlink:before,
-  .markdown-body h6:hover .markdownIt-Anchor:before {
+  .pure-markdown-body h1:hover .headerlink:before,
+  .pure-markdown-body h1:hover .markdownIt-Anchor:before,
+  .pure-markdown-body h2:hover .headerlink:before,
+  .pure-markdown-body h2:hover .markdownIt-Anchor:before,
+  .pure-markdown-body h3:hover .headerlink:before,
+  .pure-markdown-body h3:hover .markdownIt-Anchor:before,
+  .pure-markdown-body h4:hover .headerlink:before,
+  .pure-markdown-body h4:hover .markdownIt-Anchor:before,
+  .pure-markdown-body h5:hover .headerlink:before,
+  .pure-markdown-body h5:hover .markdownIt-Anchor:before,
+  .pure-markdown-body h6:hover .headerlink:before,
+  .pure-markdown-body h6:hover .markdownIt-Anchor:before {
     visibility: visible;
   }
 }
